--- a/Source/Utilities/Utilities.vcxproj.Filters
+++ b/Source/Utilities/Utilities.vcxproj.Filters
@@ -43,6 +43,9 @@
     <ClCompile Include="ipc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="dw_dma.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hw.h">
@@ -64,6 +67,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="bitops.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dw_dma.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
