Add playback. Nearly have audio playing

--- a/Source/Utilities/Utilities.vcxproj
+++ b/Source/Utilities/Utilities.vcxproj
@@ -283,6 +283,7 @@
     <ClCompile Include="ipc.cpp" />
     <ClCompile Include="kshelper.cpp" />
     <ClCompile Include="loader.cpp" />
+    <ClCompile Include="messages.cpp" />
     <ClCompile Include="pcm.cpp" />
     <ClCompile Include="resource.cpp" />
   </ItemGroup>
