--- a/Source/Utilities/Utilities.vcxproj.Filters
+++ b/Source/Utilities/Utilities.vcxproj.Filters
@@ -52,6 +52,9 @@
     <ClCompile Include="pcm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="messages.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hw.h">
